--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : " nodemon server.js ",
+    "dev": " nodemon server.js ",
     "start": "node server.js nodemon"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
